# ai-standards

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
content/claude/agents/: code-reviewer.md  reviewer.md
content/copilot/agents/: reviewer.agent.md
content/copilot/prompts/: review.prompt.md
content/cursor/skills/plan-task/: SKILL.md
content/cursor/skills/review/: SKILL.md
content/skills/implement-story/: SKILL.md
content/skills/plan-task/: SKILL.md
content/skills/read-docs/: SKILL.md
content/skills/review/: SKILL.md
content/skills/reviewer-loop/: SKILL.md
content/skills/systematic-debugging/: SKILL.md  defense-in-depth.md  root-cause-tracing.md
content/skills/test-driven-development/: SKILL.md  testing-anti-patterns.md
content/skills/verification-before-completion/: SKILL.md
layers/: manifest.json  python.md  typescript.md  universal.md
src/ai_standards/: __main__.py  cli.py  detector.py  gitignore.py  installer.py  manifest.json  manifest.py  mcp.py  store.py
src/ai_standards/adapters/: claude_code.py  copilot.py  cursor.py  shared.py
src/ai_standards/commands/: init.py  sync.py  update.py
tests/functional/: test_init_command.py  test_install_e2e.py  test_package_install.py  test_sync_command.py  test_update_command.py
tests/unit/: test_adapter_content_files.py  test_claude_code_adapter.py  test_cli.py  test_copilot_adapter.py  test_cursor_adapter.py  test_detector.py  test_gitignore.py  test_installer.py  test_layer_files.py  test_manifest.py  test_mcp.py  test_shared_adapter.py  test_store.py
(+18 files in other folders)
