[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-standards"
version = "0.1.0"
description = "Manage personal AI coding standards across Claude Code, Cursor, and VS Code Copilot"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
ai-standards = "ai_standards.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_standards"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
